add array of rtorrent user details add user creation/management tasks

--- a/ansible/roles/rtorrent/defaults/main.yml
+++ b/ansible/roles/rtorrent/defaults/main.yml
@@ -1,2 +1,6 @@
 ---
-rtorrent_user: rtorrent
+rtorrent:
+    user: "rtorrent"
+    gecos: "Service account for running rtorrent"
+    home: "/home/rtorrent"
+    shell: "/bin/bash"
