--- a/ansible/roles/rtorrent/tasks/manage-users.yml
+++ b/ansible/roles/rtorrent/tasks/manage-users.yml
@@ -1,8 +1,16 @@
+---
+- name: "Add the rtorrent group: {{rtorrent['group']}}"
+  group:
+    name: "{{rtorrent['group']}}"
+    state: present
+
 ## Do not set shell to nologin when using the tmux service
-- name: "Add the rtorrent user: {{rtorrent_user}}"
+- name: "Add the rtorrent user: {{rtorrent['user']}}"
   user:
     name: "{{rtorrent['user']}}"
+    groups: "{{rtorrent['group']}}"
     comment: "{{rtorrent['gecos']}}"
     shell: "{{rtorrent['shell']}}"
     home: "{{rtorrent['home']}}"
     create_home: yes
+    append: yes
