--- a/ansible/roles/common/tasks/install-prereqs.yml
+++ b/ansible/roles/common/tasks/install-prereqs.yml
@@ -1,3 +1,9 @@
+- name: Update repositories cache if 8 hours old
+  apt:
+    update_cache: yes
+    cache_valid_time: 28800
+  become: yes
+
 - name: Install r(u)torrent preqs
   package:
     name: "{{ item }}"
