add rtorrent role add systemd unit fix portrange

--- a/ansible/roles/rtorrent/tasks/configure-rtorrent-rc.yml
+++ b/ansible/roles/rtorrent/tasks/configure-rtorrent-rc.yml
@@ -1,5 +1,5 @@
 - name: Render .rtorrent.rc
-  copy:
+  template:
     src: "templates/home/rtorrent/.rtorrent.rc.j2"
     dest: "{{rtorrent['home']}}/.rtorrent.rc"
     owner: "{{rtorrent['user']}}"
