add apache2 defaults install apache2 manage apache service manage apache2 user/groups add role

--- a/ansible/roles/rtorrent/tasks/main.yml
+++ b/ansible/roles/rtorrent/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: "set facts for use in other roles"
+  include: set-facts.yml
+
 - name: "Manage the state of the rtorrent user"
   include: manage-users.yml
 
