fix typo in home dir

--- a/ansible/roles/apache2/defaults/main.yml
+++ b/ansible/roles/apache2/defaults/main.yml
@@ -3,5 +3,5 @@ apache:
     user: "www-data"
     group: "www-data"
     gecos: "Service account for running apache"
-    home: "/var/wwww"
+    home: "/var/www"
     shell: "/usr/sbin/nologin"
