add apache2 tasks to try and install mod_scgi

--- a/ansible/roles/apache2/tasks/main.yml
+++ b/ansible/roles/apache2/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
 
+- name: "set facts for use in other roles"
+  include: set-facts.yml
+
 - name: "Manage the state of the apache user"
   include: manage-users.yml
+
+- name: "Try to download/install mod-scgi"
+  include: handle-mod-scgi.yml
