add rutorrent to play, handle mod-scgi

--- a/ansible/roles/rutorrent/tasks/main.yml
+++ b/ansible/roles/rutorrent/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 
+- name: "Copy application to webroot"
+  include: copy-rutorrent-to-webroot.yml
+
+- name: "Configure apache2"
+  include: configure-apache2.yml
+
