--- a/ansible/roles/rutorrent/defaults/main.yml
+++ b/ansible/roles/rutorrent/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 rutorrent:
     install_dir: "/var/www/rutorrent"
+    server_name: rutorrent.example.com
+    server_admin: webmaster@localhost
