--- a/ansible/roles/rtorrent/tasks/configure-systemd-unit.yml
+++ b/ansible/roles/rtorrent/tasks/configure-systemd-unit.yml
@@ -1,7 +1,9 @@
 - name: Render systemd unit
   template:
-    src: templates/etc/systemd/system/rtorrent.service.j2
-    dest: /etc/systemd/system/rtorrent.service
+    src: "templates/etc/systemd/system/{{ item }}.j2"
+    dest: "/etc/systemd/system/{{ item }}"
+  with_items:
+    - rtorrent.service
   become: true
   notify: restart rtorrent
 
