update template vars in tasks add rutorrent vars in common remove defaults for rutorrent

--- a/ansible/roles/common/tasks/set-facts.yml
+++ b/ansible/roles/common/tasks/set-facts.yml
@@ -17,3 +17,7 @@
     apache_gecos:  "{{ users.apache.gecos }}"
     apache_home:  "{{ users.apache.home }}"
     apache_shell:  "{{ users.apache.shell }}"
+
+- name: "Set facts for role rutorrent"
+  set_fact:
+    rutorrent_install_dir: "{{ config.rutorrent.install_dir }}"
