--- a/ansible/roles/common/defaults/main.yml
+++ b/ansible/roles/common/defaults/main.yml
@@ -23,7 +23,7 @@ config:
         install_dir: /var/www/rutorrent
         server_name: rutorrent.example.com
         server_admin: webmaster@localhost
-    apache2:
+    apache:
         server_name: rutorrent.example.com
     htpasswd:
         # widelyinsecure:widelyinsecure
@@ -31,5 +31,4 @@ config:
         crypt: $apr1$OHg.Rpvw$J2m7kwwWCTn/m//45BXKV0
 pki:
     private_key: /etc/ssl/private/apache-selfsigned.key
-    public_key: /etc/ssl/certs/apache-selfsigned.crt
-
+    public_cert: /etc/ssl/certs/apache-selfsigned.crt
