--- a/ansible/roles/rutorrent/tasks/configure-apache2.yml
+++ b/ansible/roles/rutorrent/tasks/configure-apache2.yml
@@ -19,6 +19,19 @@
   become: yes
   notify: restart apache2
 
+## Setup
+- name: Copy sites config
+  copy:
+    src: "files/etc/apache2/sites-available/{{item}}"
+    dest: "/etc/apache2/sites-available/{{item}}"
+    owner: "{{ apache_user }}"
+    group: "{{ apache_group }}"
+    mode: '0444'
+  with_items:
+      - "001-rutorrent.conf"
+  become: yes
+  notify: restart apache2
+
 ## Enable Sites
 - name: disable default site
   command:
