ensure the systemd unit is written before any systemd tasks run

--- a/ansible/roles/rtorrent/tasks/configure-systemd-unit.yml
+++ b/ansible/roles/rtorrent/tasks/configure-systemd-unit.yml
@@ -9,8 +9,10 @@
   become: true
   notify: restart rtorrent
 
-- name: Make sure a service unit is running
+- name: Make sure a service unit is stopped
   systemd:
     name: rtorrent
-    state: started
+    state: stopped
+    enabled: yes
+    daemon_reload: yes
   become: yes
