manage the rtorrent service

--- a/ansible/roles/rtorrent/tasks/main.yml
+++ b/ansible/roles/rtorrent/tasks/main.yml
@@ -17,3 +17,6 @@
 
 - name: "Configure rtorrent.rc"
   include: configure-rtorrent-rc.yml
+
+- name: "Ensure service is running"
+  include: post-install.yml
